fix chessground size on mobile

--- a/styles/chessground.css
+++ b/styles/chessground.css
@@ -58,6 +58,8 @@
 }
 @media screen and (min-width: 350px) {
 	.cg-wrap {
+		width: 330px;
+		height: 330px;
 	}
 }
 @media screen and (min-width: 450px) {
